♻️ Refactor scRNA guide

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -20,19 +20,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA-seq measures gene expression of individual cells.\n",
+    "Here, we will\n",
     "\n",
-    "Their analysis is typically based on data objects like [AnnData](https://anndata.readthedocs.io/en/latest/), [SingleCellExperiment](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) & [Seurat objects](https://github.com/satijalab/seurat).\n",
-    "\n",
-    "These objects often contain non-validated metadata, making data integration & interpretation hard.\n",
-    "\n",
-    "In this notebook, LaminDB is used to turn `AnnData` objects into validated & queryable assets.\n",
+    "1. read a single `.h5ad` file as an `AnnData` and seed a versioned dataset with it\n",
+    "2. append a new data batch (a new `.h5ad` file) to create a new version of the dataset\n",
+    "3. look at an overview of ingested files and cell markers\n",
+    "4. query the data and store analytical results as plots\n",
+    "5. annotate the data by a cell type prediction\n",
+    "6. discuss migrating a lakehouse of files to a single TileDB SOMA store of the same data\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
     ":hidden:\n",
     "\n",
+    "scrna1\n",
     "scrna2\n",
+    "scrna3\n",
     "```"
    ]
   },
@@ -73,7 +76,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Human immune cells: Conde22"
+    "## Access ![](https://img.shields.io/badge/Access-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us look at the data of [Conde _et al._, Science (2022)](https://doi.org/10.1126/science.abl5197).\n",
+    "\n",
+    "These data are available in standardized form from the [CellxGene data portal](https://cellxgene.cziscience.com/).\n",
+    "\n",
+    "Here, we'll use it to seed a growing in-house store of scRNA-seq data managed with the corresponding metadata in LaminDB registries.\n",
+    "\n",
+    "```{note}\n",
+    "\n",
+    "If you're not interested in managing large collections of in-house data and you'd just like to query public data, please take a look at [CellxGene census](docs:cellxgene-census), which exposes all datasets hosted in the data portal as a concatenated TileDB SOMA store.\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -93,14 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Access ![](https://img.shields.io/badge/Access-10b981)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let’s look at a scRNA-seq count matrix in form of an `AnnData` object that we'd like to ingest into LaminDB:"
+    "By calling `ln.dev.datasets.anndata_human_immune_cells` below, we download the dataset from the CellxGene portal [here](https://cellxgene.cziscience.com/collections/62ef75e4-cbea-454e-a0ce-998ec40223d3) and pre-populate some LaminDB registries."
    ]
   },
   {
@@ -131,7 +144,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This `AnnData` object does not require filtering, normalizing or formatting, hence, there is no ![](https://img.shields.io/badge/Transform-10b981) step."
+    "This `AnnData` is already standardized using the same public ontologies underlying [lnschema-bionty](docs:lnschema-bionty), hence, we expect validation to be simple.\n",
+    "\n",
+    "Nonetheless, LaminDB focuses on building clean in-house registries \n",
+    "\n",
+    "```{note}\n",
+    "\n",
+    "In the next notebook, we'll look at the more difficult case of a non-standardized dataset that requires curation.\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -161,16 +182,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "148 gene identifiers can’t be validated (not currently in the `Gene` registry). Lt’s inspect them to see what to do:"
+    "148 gene identifiers can’t be validated (not currently in the `Gene` registry). Let’s inspect them to see what to do:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -188,9 +207,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -204,16 +221,14 @@
    "source": [
     "The remaining 113 are legacy IDs, not present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)).\n",
     "\n",
-    "We'd still like to register them:"
+    "We'd still like to register them, but won't dive into the details of converting them from an old Ensembl version to the current one."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -242,6 +257,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our in-house Gene registry provides rich metadata for each gene measured in the `AnnData`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.filter().df().head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are about 36k genes in the registry, all for species \"human\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.filter().df().shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Validate metadata in `.obs`"
    ]
   },
@@ -260,19 +307,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(adata.obs.columns);"
+    "ln.Feature.validate(adata.obs.columns)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1 feature is not validated: `\"donor\"`. Let's register it:\n",
-    "\n",
-    "```{tip}\n",
-    "\n",
-    "Use `features = ln.Feature.from_df(df)` to bulk create features with types.\n",
-    "```"
+    "1 feature is not validated: `\"donor\"`. Let's register it:"
    ]
   },
   {
@@ -289,7 +331,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All metadata columns are now validated as feature:"
+    "```{tip}\n",
+    "\n",
+    "You can also use `features = ln.Feature.from_df(df)` to bulk create features with types.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All metadata columns are now validated:"
    ]
   },
   {
@@ -298,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(adata.obs.columns);"
+    "ln.Feature.validate(adata.obs.columns)"
    ]
   },
   {
@@ -427,9 +479,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -442,9 +492,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -544,26 +592,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A less well curated dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Access ![](https://img.shields.io/badge/Access-10b981)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now consider a dataset with less-well curated features:"
+    "## Create a dataset from the file"
    ]
   },
   {
@@ -572,168 +604,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbmc68k = ln.dev.datasets.anndata_pbmc68k_reduced()\n",
-    "pbmc68k"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We see that this dataset is indexed by gene symbols: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbmc68k.var.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.Gene.inspect(pbmc68k.var.index, lb.Gene.symbol);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standardize symbols and register additional symbols from Bionty:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "pbmc68k.var.index = lb.Gene.standardize(pbmc68k.var.index, lb.Gene.symbol)\n",
-    "gene_records = lb.Gene.from_values(pbmc68k.var.index, lb.Gene.symbol)\n",
-    "ln.save(gene_records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this case, we only want to register data with validated genes:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "validated = lb.Gene.validate(pbmc68k.var.index, lb.Gene.symbol)\n",
-    "pbmc68k_validated = pbmc68k[:, validated].copy()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Convert gene symbols into ensembl gene ids:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "records = lb.Gene.filter(id__in=[record.id for record in gene_records])\n",
-    "mapper = pd.DataFrame(records.values_list(\"symbol\", \"ensembl_gene_id\")).set_index(0)[1]\n",
-    "pbmc68k_validated.var.insert(0, \"gene_symbol\", pbmc68k_validated.var.index)\n",
-    "pbmc68k_validated.var.rename(index=mapper, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbmc68k_validated.var.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Validate cell types:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# inspect shows none of the terms are mappable\n",
-    "lb.CellType.inspect(pbmc68k_validated.obs.cell_type)\n",
+    "dataset = ln.Dataset(file, name=\"My versioned scRNA-seq dataset\", version=\"1\")\n",
     "\n",
-    "# here we search the cell type names from the public ontology and grab the top match\n",
-    "# then add the cell type names from the pbmc68k as synonyms\n",
-    "celltype_bt = lb.CellType.bionty()\n",
-    "ontology_ids = []\n",
-    "mapper = {}\n",
-    "for ct in pbmc68k_validated.obs.cell_type.unique():\n",
-    "    ontology_id = celltype_bt.search(ct).iloc[0].ontology_id\n",
-    "    record = lb.CellType.from_bionty(ontology_id=ontology_id)\n",
-    "    mapper[ct] = record.name\n",
-    "    record.save()\n",
-    "    record.add_synonym(ct)\n",
-    "\n",
-    "# standardize cell type names in the dataset\n",
-    "pbmc68k_validated.obs.cell_type = pbmc68k_validated.obs.cell_type.map(mapper)"
+    "dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, all cell types are validated:"
+    "Let's inspect the features measured in this dataset which were inherited from the file:"
    ]
   },
   {
@@ -742,60 +622,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(pbmc68k_validated.obs.cell_type);"
+    "dataset.features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file = ln.File.from_anndata(\n",
-    "    pbmc68k_validated,\n",
-    "    description=\"10x reference pbmc68k\",\n",
-    "    field=lb.Gene.ensembl_gene_id,\n",
-    "    modality=modalities.rna,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file.labels.add(pbmc68k_validated.obs.cell_type, features.cell_type)\n",
-    "file.labels.add(species.human, feature=features.species)\n",
-    "file.labels.add(experimental_factors.single_cell_rna_sequencing, feature=features.assay)"
+    "This looks all good, hence, let's save it:"
    ]
   },
   {
@@ -804,32 +638,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.view_flow()"
+    "dataset.save()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🎉 Now let's continue with data integration: {doc}`./scrna2`"
+    "Annotate by linking labels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.labels.add(experimental_factors.single_cell_rna_sequencing, features.assay)\n",
+    "dataset.labels.add(species.human, features.species)\n",
+    "dataset.labels.add(adata.obs.cell_type, feature=features.cell_type)\n",
+    "dataset.labels.add(adata.obs.assay, feature=features.assay)\n",
+    "dataset.labels.add(adata.obs.tissue, feature=features.tissue)\n",
+    "dataset.labels.add(adata.obs.donor, feature=features.donor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this version 1 of the dataset, dataset and file match each other. But they're independently tracked and queryable through their registries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we can access the file like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.view_flow()"
    ]
   }
  ],
