--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate scRNA-seq datasets"
+    "# Query individual files"
    ]
   },
   {
@@ -22,26 +22,6 @@
     "scRNA-seq data integration is the process of analyzing data from several scRNA sequencing experiments to uncover common or distinct biological insights and patterns.\n",
     "\n",
     "Here, we'll demonstrate how to fetch two scRNA-seq datasets by registered metadata such as cell types to finally integrate them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "!lamin load test-scrna"
    ]
   },
   {
@@ -346,21 +326,6 @@
    "outputs": [],
    "source": [
     "adata_concat.obs.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-scrna\n",
-    "!rm -r ./test-scrna"
    ]
   }
  ],
