--- a/docs/scrna1.ipynb
+++ b/docs/scrna1.ipynb
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "for column in [\"n_genes\", \"percent_mito\", \"louvain\"]:\n",
-    "    adata.obs[column].drop()"
+    "    adata.obs.drop(column, axis=1)"
    ]
   },
   {
