♻️ Refactor scRNA guide (#70)

--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a sharded dataset"
+    "# Analyze the sharded dataset in memory"
    ]
   },
   {
@@ -15,7 +15,15 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
-    "\n",
+    "import anndata as ad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ln.track()"
    ]
   },
@@ -34,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned FACS dataset\", version=\"2\").one()"
+    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()"
    ]
   },
   {
@@ -43,7 +51,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = dataset.load(join=\"inner\")"
+    "dataset.files.df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the dataset doesn't consist of too many files, we can now load it into memory.\n",
+    "\n",
+    "Under-the-hood, the `AnnData` objects are concatenated during loading.\n",
+    "\n",
+    "The amount of time this takes depends on a variety of factors.\n",
+    "\n",
+    "If it occurs often, one might consider storing a concatenated version of the dataset, rather than the individual pieces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = dataset.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default is an outer join during concatenation as in pandas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
    ]
   },
   {
@@ -66,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the intersection of features is used:"
+    "We can easily obtain ensemble IDs for gene symbols using the look up object:"
    ]
   },
   {
@@ -75,7 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index"
+    "genes = lb.Gene.lookup(field=\"symbol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes.itm2a.ensembl_gene_id"
    ]
   },
   {
@@ -91,20 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import scanpy as sc\n",
     "\n",
-    "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name, save=\"_cd14\")\n",
-    "filepath = \"figures/pca_cd14\""
+    "sc.pp.pca(adata, n_comps=2)"
    ]
   },
   {
@@ -113,7 +157,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_cd14.pdf\", description=\"My result on CD14\")"
+    "sc.pl.pca(\n",
+    "    adata,\n",
+    "    color=genes.itm2a.ensembl_gene_id,\n",
+    "    title=(\n",
+    "        f\"{genes.itm2a.symbol} / {genes.itm2a.ensembl_gene_id} /\"\n",
+    "        f\" {genes.itm2a.description}\"\n",
+    "    ),\n",
+    "    save=\"_itm2a\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File(\"./figures/pca_itm2a.pdf\", description=\"My result on ITM2A\")"
    ]
   },
   {
@@ -141,8 +202,8 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete --force test-facs\n",
-    "!rm -r test-flow"
+    "!lamin delete --force test-scrna\n",
+    "!rm -r ./test-scrna"
    ]
   }
  ],
@@ -165,10 +226,10 @@
    "version": "3.9.16"
   },
   "nbproject": {
-   "id": "zzJzdgJ763Dy",
+   "id": "mfWKm8OtAzp8",
    "parent": null,
    "pypackage": null,
-   "time_init": "2023-09-26T11:39:41.987891+00:00",
+   "time_init": "2023-09-29T12:59:55.490264+00:00",
    "user_handle": null,
    "user_id": null,
    "user_name": null,
