--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -20,14 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we will\n",
+    "You'll learn how to manage a growing number of scRNA-seq data batches as a single queryable dataset.\n",
     "\n",
-    "1. read a single `.h5ad` file as an `AnnData` and seed a versioned dataset with it\n",
-    "2. append a new data batch (a new `.h5ad` file) to create a new version of the dataset\n",
-    "3. look at an overview of ingested files and cell markers\n",
-    "4. query the data and store analytical results as plots\n",
-    "5. annotate the data by a cell type prediction\n",
-    "6. discuss migrating a lakehouse of files to a single TileDB SOMA store of the same data\n",
+    "Along the way, you'll see how to create reports, leverage data lineage, and query statistics of individual data batches stored as files.\n",
+    "\n",
+    "Specifically, you will:\n",
+    "\n",
+    "1. read a single `.h5ad` file as an `AnnData` and seed a growing dataset with it\n",
+    "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([here](/scrna1))\n",
+    "3. query files by metadata individually and inspect their features ([here](/scrna2), can be skipped)\n",
+    "4. load the dataset into memory and save analytical results as plots ([here](/scrna3))\n",
+    "5. iterate over the dataset and train a model (to come)\n",
+    "5. annotate the dataset by a cell type prediction (to come)\n",
+    "6. discuss migrating a lakehouse of files to a single TileDB SOMA store of the same data (to come)\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
