--- a/docs/scrna1.ipynb
+++ b/docs/scrna1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll both learn how standardize a less well curated dataset and how to append a new batch of data to the growing versioned dataset."
+    "Here, we'll both learn how standardize a less well curated dataset and how to append it as a new batch of data to the growing versioned dataset."
    ]
   },
   {
