--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -19,9 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scRNA-seq data integration is the process of analyzing data from several scRNA sequencing experiments to uncover common or distinct biological insights and patterns.\n",
+    "Here, we'll query individual files and inspect their metadata.\n",
     "\n",
-    "Here, we'll demonstrate how to fetch two scRNA-seq datasets by registered metadata such as cell types to finally integrate them."
+    "This guide can be skipped if you are only interested in how to leverage the overall dataset."
    ]
   },
   {
