--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the sharded dataset in memory"
+    "# Analyze the dataset in memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we'll analyze the growing dataset by loading it into memory.\n",
+    "\n",
+    "This is only possible if it's not too large. If you deal with particularly large data, please read the guide on iterating over datta batches (to come)."
    ]
   },
   {
