--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vae.train(max_epochs=240)"
+    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vae.train(max_epochs=160)"
+    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vae.train(max_epochs=80)"
+    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
    ]
   },
   {
