--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -430,12 +430,16 @@
    "id": "74753e31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# clean up test instance\n",
+    "!lamin delete --force test-scrna\n",
+    "!rm -r ./test-scrna"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.8"
   },
   "nbproject": {
    "id": "Qr1kIHvK506r",
