--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -203,22 +203,11 @@
    "source": [
     "file.view_flow()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up test instance\n",
-    "!lamin delete --force test-scrna\n",
-    "!rm -r ./test-scrna"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.8"
   },
   "nbproject": {
    "id": "mfWKm8OtAzp8",
