--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -9,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,6 +40,7 @@
     "scrna1\n",
     "scrna2\n",
     "scrna3\n",
+    "scrna4\n",
     "```"
    ]
   },
@@ -711,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.8"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
