📝 Polish scrna guide

--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -5,7 +5,17 @@
    "id": "6a0da8a5",
    "metadata": {},
    "source": [
-    "# Train an autoencoder to get a low-dimensional representation"
+    "# Iteratively train an ML model model on a dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a33a86e",
+   "metadata": {},
+   "source": [
+    "In the [previous tutorial](scrna3), we loaded an entire dataset into memory to perform a simple analysis.\n",
+    "\n",
+    "Here, we'll iterate over the files within the dataset, to train an ML model."
    ]
   },
   {
@@ -17,8 +27,7 @@
    "source": [
     "import lamindb as ln\n",
     "import anndata as ad\n",
-    "import numpy as np\n",
-    "import scgen"
+    "import numpy as np"
    ]
   },
   {
@@ -38,7 +47,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()"
+    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
+    "\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285a537f",
+   "metadata": {},
+   "source": [
+    "We import [scGen](https://github.com/theislab/scgen), which is built on [scvi-tools](https://github.com/scverse/scvi-tools)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aa24cd7",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import scgen"
    ]
   },
   {
@@ -46,91 +79,26 @@
    "id": "cd564b74",
    "metadata": {},
    "source": [
-    "## Train scgen model on the concatenated dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd446227",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train = dataset.load(join=\"inner\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bdb4982",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1c7e31a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train.obs.file_id.value_counts()"
+    "Similar to what we did in the [previous tutorial](scrna3), we could load the entire dataset into memory and train a model in 4 lines of code.\n",
+    "\n",
+    ":::{dropdown} How would this look like?\n",
+    "\n",
+    "```\n",
+    "data_train = dataset.load(join=\"inner\")\n",
+    "scgen.SCGEN.setup_anndata(data_train)\n",
+    "vae = scgen.SCGEN(data_train)\n",
+    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI\n",
+    "```\n",
+    "\n",
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29bd1d9c",
+   "id": "c0a61ac1",
    "metadata": {},
    "source": [
-    "We use `SCGEN` here instead of `SCVI` or `SCANVI` because we have access only to normalized exression data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9b124a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scgen.SCGEN.setup_anndata(data_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05da62d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae = scgen.SCGEN(data_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e7b5cb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6832304",
-   "metadata": {},
-   "source": [
-    "## Train on the files iteratively"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b2cb297",
-   "metadata": {},
-   "source": [
-    "For a large number of huge files it might be better to train the model iteratively."
+    "Let us instead load all file records:"
    ]
   },
   {
@@ -144,6 +112,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "500dd0d2",
+   "metadata": {},
+   "source": [
+    "We'd like some context on what the first file contains and where it's from:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02fb951e",
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "file1.describe()\n",
+    "file1.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2e2b3a",
+   "metadata": {},
+   "source": [
+    "We'll need to make a decision on the features that we want to use for training the model.\n",
+    "\n",
+    "Because each file is validated, they're all indexed by `ensembl_gene_id` in the `var` slot of AnnData."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b1bd6fc6",
@@ -151,7 +152,23 @@
    "outputs": [],
    "source": [
     "shared_genes = file1.features[\"var\"] & file2.features[\"var\"]\n",
-    "shred_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
+    "shared_genes_ensembl = shared_genes.list(\"ensembl_gene_id\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a7e2e85",
+   "metadata": {},
+   "source": [
+    "### Train on the first file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3634185",
+   "metadata": {},
+   "source": [
+    "Let us load the first file into memory:"
    ]
   },
   {
@@ -161,107 +178,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train1 = file1.load()[:, shred_genes_ensembl].copy()"
+    "data_train1 = file1.load()[:, shared_genes_ensembl].copy()\n",
+    "data_train1"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5dcb5ab",
+   "cell_type": "markdown",
+   "id": "1bfef8a2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data_train1"
+    "Train the model on this batch of data:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ec5a6cf",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "scgen.SCGEN.setup_anndata(data_train1)"
+    "scgen.SCGEN.setup_anndata(data_train1)\n",
+    "vae = scgen.SCGEN(data_train1)\n",
+    "vae.train(max_epochs=1)  # we use max_epochs=1 to run it on CI\n",
+    "vae.save(\"saved_models/scgen1\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1c7d991",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae = scgen.SCGEN(data_train1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ac8a69e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d42318ec",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "vae.save(\"saved_models/scgen\")"
+    "Load the file and keep training the model:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "aba80e62",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "data_train2 = file2.load()[:, shred_genes_ensembl].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e113974a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_train2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dbc3bb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae = scgen.SCGEN.load(\"saved_models/scgen\", data_train2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f912d6fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae.train(max_epochs=1)  # we use max_epochs=1 to be able to run it on CI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45a8ba83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vae.save(\"saved_models/scgen\", overwrite=True)"
+    "data_train2 = file2.load()[:, shared_genes_ensembl].copy()\n",
+    "vae = scgen.SCGEN.load(\"saved_models/scgen1\", data_train2)\n",
+    "vae.train(max_epochs=1)\n",
+    "vae.save(\"saved_models/scgen1\", overwrite=True)"
    ]
   },
   {
@@ -269,7 +237,7 @@
    "id": "43770f7a",
    "metadata": {},
    "source": [
-    "## Save the model weights"
+    "## Save the model"
    ]
   },
   {
@@ -279,16 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights = ln.File(\"saved_models/scgen/model.pt\", key=\"models/scgen/model.pt\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6588bcb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "weights = ln.File(\"saved_models/scgen1/model.pt\", description=\"My trained model\")\n",
     "weights.save()"
    ]
   },
@@ -297,7 +256,7 @@
    "id": "296c67a4",
    "metadata": {},
    "source": [
-    "## Get and store the low-dimensional representation"
+    "## Save latent representation as a new dataset"
    ]
   },
   {
@@ -310,85 +269,28 @@
     "latent1 = vae.get_latent_representation(data_train1)\n",
     "latent2 = vae.get_latent_representation(data_train2)\n",
     "\n",
-    "latent = np.vstack((latent1, latent2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bc8cb93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata_latent = ad.AnnData(X=latent)"
+    "adata_latent1 = ad.AnnData(X=latent1, obs=data_train1.obs)\n",
+    "adata_latent2 = ad.AnnData(X=latent2, obs=data_train2.obs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ad45276",
+   "id": "e7da5328",
    "metadata": {},
    "source": [
-    "Set file id."
+    "Because the latent representation is low-dimensional, we can typically fit very high number of observations into memory.\n",
+    "\n",
+    "Hence, let's store it as a concatenated adata."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5511a225",
+   "id": "54f55922",
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata_latent.obs[\"file_id\"] = np.concatenate(\n",
-    "    (np.full(len(data_train1), file1.id), np.full(len(data_train2), file2.id))\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5536eb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_latent = ln.File(adata_latent, key=\"adata_latent.h5ad\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67ad2d22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_latent.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39f1326c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_latent.genes.set(shared_genes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5caa3643",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_latent.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07f33746",
-   "metadata": {},
-   "source": [
-    "## Append the low-dimensional representation to the dataset"
+    "adata_latent = ad.concat([adata_latent1, adata_latent2])"
    ]
   },
   {
@@ -398,9 +300,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v3 = ln.Dataset(\n",
-    "    dataset.files.list() + [file_latent],\n",
-    "    is_new_version_of=dataset,\n",
+    "dataset_v2_latent = ln.Dataset(\n",
+    "    adata_latent,\n",
+    "    name=\"Latent representation of scRNA-seq dataset v2\",\n",
+    "    description=\"For the original data, see dataset T5x0SkRJNviE0jYGbJKt\",\n",
     ")"
    ]
   },
@@ -411,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v3"
+    "dataset_v2_latent.view_flow()"
    ]
   },
   {
@@ -421,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v3.save()"
+    "dataset_v2_latent.save()"
    ]
   },
   {
@@ -453,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "Qr1kIHvK506r",
