--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -27,11 +27,10 @@
     "\n",
     "1. read a single `.h5ad` file as an `AnnData` and seed a growing dataset with it\n",
     "2. append a new data batch (a new `.h5ad` file) and create a new version of this dataset ([here](/scrna1))\n",
-    "3. query files by metadata individually and inspect their features ([here](/scrna2), can be skipped)\n",
+    "3. query & inspect files by metadata individually ([here](/scrna2))\n",
     "4. load the dataset into memory and save analytical results as plots ([here](/scrna3))\n",
-    "5. iterate over the dataset and train a model (to come)\n",
-    "5. annotate the dataset by a cell type prediction (to come)\n",
-    "6. discuss migrating a lakehouse of files to a single TileDB SOMA store of the same data (to come)\n",
+    "5. iterate over the dataset, train a model, store a derived representation ([here](/scrna4))\n",
+    "6. discuss converting a number of files to a single TileDB SOMA store of the same data (to come)\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -725,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
