--- a/docs/scrna1.ipynb
+++ b/docs/scrna1.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we'll both learn how standardize a less well curated dataset and how to append it as a new batch of data to the growing versioned dataset."
+    "Here, we'll learn \n",
+    "- how to standardize a less well curated dataset\n",
+    "- how to append it as a new batch of data to the growing versioned dataset"
    ]
   },
   {
@@ -31,7 +33,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access ![](https://img.shields.io/badge/Access-10b981)"
+    "## Standardize a less-well curated dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
    ]
   },
   {
@@ -87,14 +96,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curate & validate genes"
+    "#### Curate & validate genes"
    ]
   },
   {
@@ -184,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curate & validate cell types"
+    "#### Curate & validate cell types"
    ]
   },
   {
@@ -286,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981) "
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -364,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a new version of the dataset by appending a file"
+    "## Append a file to the growing dataset"
    ]
   },
   {
@@ -380,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the old version:"
+    "Query the previous dataset and the file we just created:"
    ]
   },
   {
@@ -389,25 +398,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.filter().order_by(\"-created_at\").first()"
+    "dataset_v1 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"1\").one()\n",
+    "\n",
+    "new_file = ln.File.filter().order_by(\"-created_at\").first()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v1 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"1\").one()"
+    "Create a new version of the dataset by sharding it across the new file and the file in the previous version of the dataset:"
    ]
   },
   {
@@ -417,46 +417,14 @@
    "outputs": [],
    "source": [
     "dataset_v2 = ln.Dataset(\n",
-    "    [file, dataset_v1.file],\n",
+    "    [new_file, dataset_v1.file],\n",
     "    is_new_version_of=dataset_v1,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2.labels.add_from(file)\n",
+    ")\n",
+    "dataset_v2.save()\n",
+    "\n",
+    "# annotate the dataset\n",
+    "dataset_v2.labels.add_from(new_file)\n",
     "dataset_v2.labels.add_from(dataset_v1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_v2.view_flow()"
    ]
   },
   {
@@ -473,6 +441,22 @@
    "outputs": [],
    "source": [
     "dataset_v2.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the flow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.view_flow()"
    ]
   }
  ],
