--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the dataset in memory"
+    "# Analyze a dataset in memory"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.16"
   },
   "nbproject": {
    "id": "mfWKm8OtAzp8",
