--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -47,9 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
+    "dataset_v2 = ln.Dataset.filter(name=\"My versioned scRNA-seq dataset\", version=\"2\").one()\n",
     "\n",
-    "dataset"
+    "dataset_v2"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1, file2 = dataset.files.list()"
+    "file1, file2 = dataset_v2.files.list()"
    ]
   },
   {
@@ -304,7 +304,8 @@
     "    adata_latent,\n",
     "    name=\"Latent representation of scRNA-seq dataset v2\",\n",
     "    description=\"For the original data, see dataset T5x0SkRJNviE0jYGbJKt\",\n",
-    ")"
+    ")\n",
+    "dataset_v2_latent.save()"
    ]
   },
   {
@@ -318,13 +319,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e814c919",
+   "metadata": {},
+   "source": [
+    "Annotate with labels:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99142f30",
+   "id": "9414d24f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v2_latent.save()"
+    "dataset_v2_latent.labels.add_from(dataset_v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4a3da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2_latent.describe()"
    ]
   },
   {
